--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "library",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Liron-Wassa.github.io/Library",
+  "homepage": "https://Liron-Wassa.github.io/Library",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
